# ReplantedMaxxer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ReplantedMaxxer.CT  toolchain-linux-winsdk.cmake
.github/workflows/: clang_format.yml  dll.yml  dll_linux.yml  dll_linux_mingw.yml
CE/: Chocolate.CEA  CoinsMultiplier.CEA  Fertilizer.CEA  NoSeedCooldown.CEA  OneHitKill.CEA  PlantsGodMode.CEA  ReplantedMaxxer.CT  Spray.CEA  SunMultiplier.CEA  TreeFood.CEA  ZenGarden.CEA  useful-dump.json
Source/: dllmain.cpp  includes.h
Source/Hooks/: hook_manager.cpp  hook_manager.h
Source/Proxy/: proxy.cpp  proxy.h
Source/Renderer/: renderer.cpp  renderer.h
Source/UI/: menu.cpp  menu.h
